--- a/test.html
+++ b/test.html
@@ -1,2 +1,2 @@
 <h1>My first website</h1>
-<p>My fav colour is <span>green</span style="color:green;">red</span></p>
+<p>My fav colour is <span>green</span style="color:green;">green</span></p>
